<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FirstFragment"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/button_ine_frente"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_gray"
        android:text="@string/txt_ine_front"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ine_atras"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_gray"
        android:text="@string/txt_ine_back"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ine_frente" />

    <Button
        android:id="@+id/button_watch_INE"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_gray"
        android:text="@string/txt_ine_watch"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ine_atras" />

    <Button
        android:id="@+id/button_selfie"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_gray"
        android:text="@string/txt_selfie"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_watch_INE" />

    <Button
        android:id="@+id/button_watch_selfie"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_gray"
        android:text="@string/txt_watch_selfie"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_selfie" />



    <Button
        android:id="@+id/button_eviar_info"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_gray"
        android:text="@string/txt_enviar_info"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_watch_selfie" />




</androidx.constraintlayout.widget.ConstraintLayout>